<resources>
    <string name="app_name">Workout Tracker</string>
    <string name="tab_text_1">My Workouts</string>
    <string name="tab_text_2">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="workouts_fragment_title">This is the workouts fragment</string>
    <string name="history_fragment_title">This is the history fragment</string>

    <!--General-->
    <string name="settings_icn">Settings</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish Workout</string>
    <string name="update_w_name">Update Name</string>
    <string-array name="exercise_types">
        <item>Repetition Exercise</item>
        <item>Timed Exercise</item>
    </string-array>

    <!--WorkoutsFragment-->
    <string name="workout_test">Workout</string>

    <string name="add_workout_btn_desc">Add Workout</string>

    <!--AddWorkoutActivity-->
    <string name="add_workout">Add Workout</string>
    <string name="workout_add_hint">Enter Workout name</string>

    <!--EditWorkoutActivity-->
    <string name="edit_workout_title">Edit Workout</string>
    <string name="workout_name_empty">Enter Workout Name</string>

    <!--Exercise Related Strings-->
    <string name="add_exercise_title">Add Exercise</string>
    <string name="exercise_name_placeholder">Exercise Name</string>
    <string name="sets_label">Sets</string>
    <string name="reps_time">Repetitions</string>
    <string name="reps_label">Repetitions</string>
    <string name="time_label">Time</string>
    <string name="seconds_label">Seconds</string>
    <string name="minutes_label">Minutes</string>
    <string name="weight_label">Weight</string>
    <string name="add_rep_heading">Add Repetition Exercise</string>
    <string name="edit_exercise_heading">Edit Exercise</string>
    <string name="add_timed_heading">Add Timed Exercise</string>
    <string name="ex_name_hint">Exercise Name</string>

    <!--Add Exercise Dialog-->
    <string name="dialog_ex_title">Choose type of exercise</string>
    <string name="dialog_ex_msg">
        Repetition exercise is doing sets of a repeated movement,
        example: bicep curls. Timed exercise is when effort is measured over time,
        examples: plank or sprint.
    </string>

    <!--Error Strings-->
    <string name="required">Required</string>
    <string name="required_weight">Required, enter 0 in case of body weight</string>
    <string name="not_0">Needs to be greater than 0</string>
    <string name="time_err">Time Required</string>

    <!--History-->
    <string name="date_not_selected">Use calendar to select date</string>
    <string name="find_date">Open Calendar</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="units_header">Units</string>
    <string name="sync_header">Appearance</string>

    <!-- Units Preferences -->
    <string name="units_title">Weight Unit</string>

    <!-- Appearance Preferences -->
    <string name="theme_title">Dark Theme</string>
</resources>