<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rep_ex_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/rep_ex_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_name_placeholder"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <!--Sets-->
            <TextView
                style="@style/ExerciseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/sets"
                android:text="@string/sets_label"
                />
            <TextView
                style="@style/ExerciseValue"
                android:id="@+id/sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
            <!--reps/time-->
            <TextView
                style="@style/ExerciseValue"
                android:id="@+id/reps_or_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/reps_or_time"
                android:text="@string/reps_time"
                />
            <TextView
                style="@style/ExerciseValue"
                android:id="@+id/reps_or_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
            <!--weight-->
            <TextView
                style="@style/ExerciseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/weight"
                android:text="@string/weight_label"
                />
            <TextView
                style="@style/ExerciseValue"
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/rep_ex_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_delete"
                style="?attr/borderlessButtonStyle"
                app:icon="@drawable/ic_baseline_delete_24"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/rep_ex_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit"
                style="?attr/borderlessButtonStyle"
                app:icon="@drawable/ic_baseline_edit_24"
                />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>