<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_fragment_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_timed_sets"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sets_label"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pick_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_w_name"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="" />
    </LinearLayout>


</FrameLayout>