<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/perf_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name_placeholder"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perf_name">

        <!--Sets-->
        <TextView
            style="@style/ExerciseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/sets"
            android:text="@string/sets_label"
            />
        <TextView
            style="@style/ExerciseValue"
            android:id="@+id/sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
        <!--reps-->
        <TextView
            style="@style/ExerciseValue"
            android:id="@+id/reps_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/time"
            android:text="@string/time_label"
            />
        <TextView
            style="@style/ExerciseValue"
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
        <!--weight-->
        <TextView
            style="@style/ExerciseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/weight"
            android:text="@string/weight_label"
            />
        <TextView
            style="@style/ExerciseValue"
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
    </LinearLayout>

    <View
        style="@style/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>